feat(security): add role-based authorization with custom 401/403 handlers
- introduce Role enum and persist user roles in the User entity
- assign default USER role during user creation
- extend UserPrincipal to expose ROLE_* authorities
- load user roles from database in JWT authentication filter
- enable method-level authorization with @PreAuthorize
- restrict sensitive endpoints (e.g. delete user) to ADMIN role
- add custom JSON responses for 401 (unauthenticated) and 403 (forbidden)
- wire AuthenticationEntryPoint and AccessDeniedHandler into SecurityConfig